Spacing Issues

--- a/style.css
+++ b/style.css
@@ -3,27 +3,11 @@ body{
 	font-family:Courier New;
 }
 
-a.lp{
-	float:right;
-	position: absolute;
-    top: 10px;
-	right:10px;
+.nav{
+	float: right;
+	margin-top: -35px;
 }
 
-a.res{
-	float:right;
-	position: absolute;
-	top:10px;
-	right:225px;
-	
-}
-
-a.git{
-	float:right;
-	position: absolute;
-	top:7px;
-	right: 355px
-}
 
 a:link, a:visited {
    	background-color: #f2f2f2;
